profiling-using-exp-runner/backup_FINAL_RESULTS/mergesort_experiment/run_5_repetition_0/energibridge.log
sampling interval: 200, target function: merge_sort_lru_cache, input size: (38, 3, 39, 89, 37, 70, 26, 11, 83, 66, 51, 99, 27, 62, 36, 96, 54, 84, 88, 92, 2, 55, 48, 93, 65, 32, 16, 85, 1, 53, 42, 28, 77, 9, 87, 91, 6, 24, 68, 13, 80, 23, 61, 58, 94, 69, 97, 30, 78, 12, 86, 29, 5, 21, 45, 52, 90, 40, 100, 20, 95, 44, 82, 79, 59, 31, 34, 4, 10, 7, 56, 73, 17, 14, 43, 25, 19, 76, 33, 81, 50, 74, 71, 8, 98, 49, 46, 35, 22, 72, 75, 15, 64, 41, 63, 60, 47, 18, 67, 57)
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.mergesort as module; module.merge_sort_lru_cache((38, 3, 39, 89, 37, 70, 26, 11, 83, 66, 51, 99, 27, 62, 36, 96, 54, 84, 88, 92, 2, 55, 48, 93, 65, 32, 16, 85, 1, 53, 42, 28, 77, 9, 87, 91, 6, 24, 68, 13, 80, 23, 61, 58, 94, 69, 97, 30, 78, 12, 86, 29, 5, 21, 45, 52, 90, 40, 100, 20, 95, 44, 82, 79, 59, 31, 34, 4, 10, 7, 56, 73, 17, 14, 43, 25, 19, 76, 33, 81, 50, 74, 71, 8, 98, 49, 46, 35, 22, 72, 75, 15, 64, 41, 63, 60, 47, 18, 67, 57))
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 8.089739414215089 for 0.23400488 sec of execution.
